- fixing list display in post. i am not sure if i like resetting browsers default margin, padding and font sizes. :/ - still problems with the style and display on a PC (fonts are screwed up in postbody, not very well readable, letter spacing issues all over the place...) - might be that my system fonts are screwed of course and i am the only one having this problem. :)
git-svn-id: file:///svn/phpbb/trunk@5475 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/subSilver/theme/stylesheet.css
+++ b/phpBB/styles/subSilver/theme/stylesheet.css
@@ -34,6 +34,10 @@ body {
 	margin: 0;
 	}
 
+li {
+	margin-left: 25px;
+}
+
 #wrapheader {
 	height: 120px;
 	background-image: url('./images/background.gif');
